--- a/public/index.html
+++ b/public/index.html
@@ -4,22 +4,23 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta http-equiv="Content-Security-Policy" content = "default-src 'self';
+    font-src 'self' data: fonts.gstatic.com;" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-   
+
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheetz" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" > -->
-    <link rel="stylesheet" href="style.css">
-    
+    <link rel="stylesheet" href="style.css" />
+
     <title>React App</title>
   </head>
   <body>
-
     <script src="/src/index.js"></script>
 
     <div id="root"></div>
